opt/kubernetes/todo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  todo-app
  namespace: todo-app
  labels:
    app:  todo-app
  annotations:
    configmap.reloader.stakater.com/reload: todo-app
spec:
  selector:
    matchLabels:
      app: todo-app
  replicas: 1
  template:
    metadata:
      labels:
        app:  todo-app
    spec:
      volumes:
        - name: cache
          emptyDir: {}
        - name: testing
          emptyDir: {}
        - name: views
          emptyDir: {}
      securityContext:
        fsGroup: 1000
      containers:
      - name: fpm
        image: rendyananta/sample-todo-app:fpm-${APP_VERSION}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 300Mi
        ports:
        - containerPort: 9000
          name: fpm
        volumeMounts:
          - name: cache
            mountPath: /var/www/html/storage/framework/cache
          - name: views
            mountPath: /var/www/html/storage/framework/views
          - name: testing
            mountPath: /var/www/html/storage/framework/testing
      - name: nginx
        image: rendyananta/sample-todo-app:nginx-${APP_VERSION}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 100Mi
        ports:
        - containerPort:  8000
          name: nginx
